# litcitgraph

./: .gitattributes  .gitignore  README.md  Untitled.ipynb  pyproject.toml  test_req.ipynb
examples/: test.ipynb
ranking_data/SJR/: SJR_Artificial_Intelligence.csv  SJR_Automotive_Engineering.csv  SJR_Computer_Science_(miscellaneous).csv  SJR_Computer_Science_Applications.csv  SJR_Computer_Vision_and_Pattern_Recognition.csv  SJR_Control_and_Systems_Engineering.csv  SJR_Decision_Sciences_(miscellaneous).csv  SJR_Human-Computer_Interaction.csv  SJR_Industrial_and_Manufacturing_Engineering.csv  SJR_Information_Systems.csv  SJR_Information_Systems_and_Management.csv  SJR_Management_Information_Systems.csv  SJR_Management_Science_and_Operations_Research.csv  SJR_Management_of_Technology_and_Innovation.csv
src/litcitgraph/: __init__.py  constants.py  errors.py  graphs.py  loggers.py  parsing.py  requests.py  types.py
src/litcitgraph/ranking/: __init__.py  common.py  ranks.py
src/scopus_citgraph/: graphs.py  parsing.py  requests.py
test-notebooks/: ranking_data.ipynb  test-Copy1.ipynb  test.ipynb
