[project]
name = "litcitgraph"
version = "0.1.0"
description = "automatically build citation graphs for a given batch of literature extracted from scientific databases"
authors = [
    {name = "Florian Förster", email = "florian.foerster@mb.tu-chemnitz.de"},
]
dependencies = [
    "networkx>=3.3",
    "pybliometrics>=3.6",
    "tqdm>=4.66.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
graphistry = [
    "graphistry>=0.33.8",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
example-tests = [
    "jupyterlab>=4.1.8",
    "ipywidgets>=8.1.2",
]
data-handling = [
    "pandas>=2.2.2",
]
