[project]
name = "litcitgraph"
dynamic = ["version"]
description = "automatically build citation graphs for a given batch of literature extracted from scientific databases"
authors = [
    {name = "Florian Förster", email = "florian.foerster@mb.tu-chemnitz.de"},
]
dependencies = [
    "networkx>=3.3",
    "pybliometrics>=3.6",
    "tqdm>=4.66.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
graphistry = [
    "graphistry>=0.33.8",
]
ranks = [
    "thefuzz>=0.22.1",
    "pandas>=2.2.2",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
version = { source = "file", path = "src/litcitgraph/__init__.py" }

[tool.pdm.dev-dependencies]
example-tests = [
    "jupyterlab>=4.1.8",
    "ipywidgets>=8.1.2",
]
data-handling = [
    "pandas>=2.2.2",
]
general = [
    "ruff>=0.4.5",
]

[tool.ruff]
line-length = 94
indent-width = 4
target-version = "py311"
src = ["src"]

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I"]
